--- a/tasks.org
+++ b/tasks.org
@@ -13,11 +13,11 @@
 ** DONE Add Makefile build and test system
 ** DONE Add first contract type and fix bugs
 
-* TODO [0/4] Version 0.2.0
+* TODO [1/12] Version 0.2.0
 
 ** TODO Add all GAP milestone contracts
 - Including Heli and Seaplane too
-** TODO Would it make sense to group all K-Planes groups into one?
+** DONE Would it make sense to group all K-Planes groups into one?
 ** TODO Add reward scaling
 - Based on distance/speed/altitude  
 ** TODO Add atmosphere scaling
