--- a/tasks.org
+++ b/tasks.org
@@ -24,21 +24,25 @@
 - Add to build system
 ** DONE Add reward scaling
 - Based on distance/speed/altitude  
-** TODO Bugs, bugs, bugs
-*** TODO Agent names have to be real names, not ids.
-*** TODO Only add Agent if one with same name does not exist.
+** TODO Agent names have to be real names, not ids.
+** TODO Only add Agent if one with same name does not exist.
 - &AGENT[KASA]:LAST[KPlanes]
-*** TODO Why is second contract not acceptable?
-*** TODO Better format for altitude
+** TODO Why is second contract not acceptable?
+** TODO Better format for altitude
 - AltMin = 1000 (double)
-- PrettyAltMin = "1,000m" or "10km"  or 10km (if > 10000) (String)
-- AltMax/PrettyAltMax same
-- PrettyAltReq =
-  - AltMin only :: "above 10km"
-  - AltMax only :: "below 10km"
-  - AltMin & AltMax :: "between 10km and 20km"
-- Use similar for SpeedMin/SpeedMax, DistMin, DistMax  
-*** TODO Better height definitions:
+- NameAltMin = Troposhere Low
+- PrettyAltMin = "10km (Troposphere Low)"
+- AltMax similar
+- PrettyAltLimits =
+  - AltMin only :: "above 10km (Troposphere Low)"
+  - AltMax only :: not allowed, either min or min/max
+  - AltMin & AltMax :: "between 10km and 20km (Troposphere Low)"
+    - Latter name is taken from min
+- Use similar for SpeedMin/SpeedMax, DistMin, DistMax
+** TODO Ensure localized strings use Pretty versions
+"asdasd".Format(...)
+- How to do this?
+** TODO Better height definitions:
 
 | Squad      | KPlanes          | Stock Alt | Equation                     | Stock Value | RSS Value | Actual |
 |------------+------------------+-----------+------------------------------+-------------+-----------+--------|
@@ -62,20 +66,10 @@
 
 - SpaceLEO :: Uses the ISS height, since LEO is actually 140 to 2000 in real world.
 
-*** TODO Change requirements in table to be just contract name (so more can be added)
-*** TODO Better science and reputation computation
-- Early contract prestige must be Trivial tho as these are limited?
-- Prestige drives science awards:
-  - Prestige1Sci :: 1
-  - Prestige2Sci :: 5
-  - Prestige3Sci :: 10
-- Prestige drives reputation awards also:
-  - Prestige1Rep : 5
-  - Prestige2Rep : 25
-  - Prestige2Rep : 50
-- Scale is used however
-
-
+** TODO Change requirements in table to be just contract name (so more can be added)
+** TODO Change reward scale to seperate coloumns: Funds, Science and Reputation
+- These are values assuming scale = 1, so easy to balance
+- Take them from existing contracts
 ** TODO Add atmosphere scaling
 - Based on Stock, 2.5/2.7 or RSS scaling
 - Troposphere, Stratosphere, Karman Line/Space
