Remove contract table in tasks, now in file.

--- a/tasks.org
+++ b/tasks.org
@@ -101,70 +101,4 @@
 
 * Contract Table
 
-Values are for Stock Kerbin, but are dynamically scaled according to home world planet's dimensions/atmosphere.
-
-| Agent  | Name                         | Style        |       Value | Rocket? | Staging? | Air Launch? |
-|--------+------------------------------+--------------+-------------+---------+----------+-------------|
-| Wright | First Flight                 | Fly          |           - | N       | N        | N           |
-| Wright | 2500m                        | Height       |        2500 | N       | N        | N           |
-| Wright | 100m/s                       | Speed        |         100 | N       | N        | N           |
-| Wright | Seaplane                     | Land         |         Sea | N       | N        | N           |
-| Wright | Helicopter                   | Land         |     KSC VAB | N       | N        | N           |
-| Wright | 10km                         | Distance     |          10 | N       | N        | N           |
-| Wright | 5000m                        | Height       |        5000 | N       | N        | N           |
-| Wright | 100km                        | Distance     |         100 | N       | N        | N           |
-| Wright | 200m/s                       | Speed        |         200 | N       | N        | N           |
-| Wright | 1000km                       | Distance     |        1000 | N       | N        | N           |
-| Wright | Mountaineer                  | Land         |         *M* | N       | N        | N           |
-| Wright | Long Distance                | Distance     |       10000 | N       | N        | N           |
-|--------+------------------------------+--------------+-------------+---------+----------+-------------|
-| KACA   | 10000m                       | Height       |       10000 | Y       | N        | Y           |
-| KACA   | Mach 1                       | Speed        |         330 | Y       | N        | Y           |
-| KACA   | Stratosphere Low *1*         | Height       |       20000 | Y       | N        | Y           |
-| KACA   | Mach 2                       | Speed        |         660 | Y       | N        | Y           |
-| KACA   | Jet VTOL                     | Land         |           - | N       | N        | N           |
-| KACA   | To The North Pole            | Distance *4* |       19000 | N       | N        | N           |
-| KACA   | Stratosphere High *2*        | Height       |       35000 | Y       | N        | Y           |
-| KACA   | Mach 3                       | Speed        |         990 | Y       | N        | Y           |
-| KACA   | Around The World             | Distance *4* |       38000 | N       | N        | N           |
-| KACA   | Stratospheric Jet            | Height       |       35000 | N       | N        | N           |
-| KACA   | Mach 3 Jet                   | Speed        |         990 | N       | N        | N           |
-| KACA   | Around The Poles             | Distance *4* |       38000 | N       | N        | N           |
-|--------+------------------------------+--------------+-------------+---------+----------+-------------|
-| KASA   | Mesosphere *3*               | Height       |       57000 | Y       | N        | N           |
-| KASA   | Mach 4                       | Speed        |        1320 | Y       | N        | N           |
-| KASA   | Rocket VTOL                  | Land         |           - | Y       | N        | N           |
-| KASA   | Sub-Orbital                  | Height       |       70000 | Y       | N        | N           |
-| KASA   | Mach 5                       | Speed        |        1650 | Y       | N        | N           |
-| KASA   | Going Electrical *5*         | Distance     |       38000 | N       | N        | N           |
-| KASA   | Orbital Shuttle              | Distance     |       Orbit | Y       | Y        | N           |
-| KASA   | Orbital Shuttle 1T Payload   | Payload      |           1 | Y       | Y        | N           |
-| KASA   | Orbital Shuttle 10T Payload  | Payload      |          10 | Y       | Y        | N           |
-| KASA   | Orbital Shuttle 30T Payload  | Distance     |          30 | Y       | Y        | N           |
-| KASA   | Sub-Orbital SSTO             | Height       |       70000 | Y       | N        | N           |
-| KASA   | Orbital SSTO                 | Distance     |       Orbit | Y       | N        | N           |
-|--------+------------------------------+--------------+-------------+---------+----------+-------------|
-| SSI    | Orbital SSTO 1T Payload      | Payload      |           1 | Y       | N        | N           |
-| SSI    | Orbital SSTO 10T Payload     | Payload      |          10 | Y       | N        | N           |
-| SSI    | Orbital SSTO 30T Payload     | Payload      |          30 | Y       | N        | N           |
-| SSI    | Orbital GEO SSTO 15T Payload | Payload      |          15 | Y       | N        | N           |
-| SSI    | Lunar Orbit SSTO             | Distance     | Lunar Orbit | Y       | N        | N           |
-| SSI    | Lunar Orbit SSTO 1T Payload  | Payload      |           1 | Y       | N        | N           |
-| SSI    | Lunar Orbit SSTO 10T Payload | Payload      |          10 | Y       | N        | N           |
-| SSI    | Lunar Land SSTO              | Distance     |  Lunar Land | Y       | N        | N           |
-| SSI    | Lunar Land SSTO 1T Payload   | Payload      |           1 | Y       | N        | N           |
-| SSI    | Lunar Land SSTO 10T Payload  | Payload      |          10 | Y       | N        | N           |
-| SSI    | Lunar Land SSTO 30T Payload  | Payload      |          30 | Y       | N        | N           |
-| SSI    | Lunar Land SSTO 50T Payload  | Payload      |          50 | Y       | N        | N           |
-|--------+------------------------------+--------------+-------------+---------+----------+-------------|
-
-Key:
-
-*M* :: Mountain biome and landed at >1000m, can use plane or helicopter
-*1* :: Flying High + 1/9th
-*2* :: Third way between Flying High to Space (70 - 18) / 3 + 18 == 35)
-*3* :: Three quarters Flying High to Space (70 - 18) * 0.75 + 18 = 57)
-*4* :: Circumference of home world, great circle from location through pole or
-*equator at 90 degrees West (following sun)
-*5* :: Similar to Around The World but only electric engines. Allow RTG, Solar, Batteries
-and Nuclear.
+- See ContractTable.csv
