--- a/tasks.org
+++ b/tasks.org
@@ -13,7 +13,7 @@
 ** DONE Add Makefile build and test system
 ** DONE Add first contract type and fix bugs
 
-* TODO [10/21] Version 0.2.0
+* TODO [11/22] Version 0.2.0
 
 ** DONE Add all GAP milestone contracts
 - Including Heli and Seaplane too
@@ -46,7 +46,7 @@
 ** DONE Ensure localized strings use Pretty versions
 "asdasd".Format(...)
 - How to do this?
-** TODO Better height definitions:
+** DONE Better height definitions:
 
 | Squad      | KPlanes          | Stock Alt | Equation                     | Stock Value | RSS Value | Actual |
 |------------+------------------+-----------+------------------------------+-------------+-----------+--------|
@@ -70,12 +70,12 @@
 
 - SpaceLEO :: Uses the ISS height, since LEO is actually 140 to 2000 in real world.
 
-** TODO Move "Mid Stage" to right of Style, as "Style Param"
-- For Land - is a Biome, "Mountain" or "Hovering" are special
-** TODO Change requirements in table to be just contract name (so more can be added)
 ** TODO Change reward scale to seperate coloumns: Funds, Science and Reputation
 - These are values assuming scale = 1, so easy to balance
 - Take them from existing contracts
+** TODO Move "Mid Stage" to right of Style, as "Style Param"
+- For Land - is a Biome, "Mountain" or "Hovering" are special
+** TODO Change requirements in table to be just contract name (so more can be added)
 ** TODO Add atmosphere scaling
 - Based on Stock, 2.5/2.7 or RSS scaling
 - Troposphere, Stratosphere, Karman Line/Space
