Change reward scaling to sqrt(scale).

--- a/tasks.org
+++ b/tasks.org
@@ -13,7 +13,7 @@
 ** DONE Add Makefile build and test system
 ** DONE Add first contract type and fix bugs
 
-* TODO [16/31] Version 0.2.0
+* TODO [17/31] Version 0.2.0
 
 ** DONE Add all GAP milestone contracts
 - Including Heli and Seaplane too
@@ -81,12 +81,8 @@
 - For Land - is a Biome, "Mountain" or "Hovering" are special
 ** DONE Initial distance values may be too big for non-stock
 - Check real scale makes sense in real life, see if stock works (1/10th)
-** TODO Check real scale rewards are not scaled too high
-- First contract would be 100 science
-- Perhaps science and rep are not scaled, probably as contracts are for money
-- Possibly some or all are sqrt(scale), ie.
-  - KSRSS would be 1.6x (16)
-  - RSS would be 3x (30)
+** DONE Check real scale rewards are not scaled too high
+- Scale only reward funds by sqrt(scale).
 ** TODO Change initial height and speed records to absolute (?)
 - Speed in table is m/s, Mach1 etc. are computed (or hard coded)
 ** TODO Add basic GAP contracts
